--- a/public/style.css
+++ b/public/style.css
@@ -2,11 +2,12 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 body{
     background-color: #181718;
-    font-family: Arial, Helvetica, sans-serif;
+    
 }
 
 header{
@@ -41,33 +42,77 @@ header nav ul li a:hover{
     color: white;
 }
 
-
-
 main{
-    width: 80%;
+    width: 75%;
+    float: right;
+    padding: 20px;
+}
+
+aside{
+    margin-top: 10px;
+    height: 50%;
+    width: 20%;
+    float: left; 
+}
+
+aside img{
+    margin: 20px;
+}
+
+aside div{
+    display: flex;
+    align-items: center;
+}
+
+aside div p{
+    color: #0CF25D;
+    font-weight: bold;
+}
+
+aside ul{
+    margin: 20px;
+    list-style: none;
+}
+
+aside ul li{
+    margin-bottom: 13px;
+}
+
+aside ul li a:hover{
+    color: white;
+}
+
+aside ul li a{
+    margin: 20px;
+    text-decoration: none;
+    color: #0CF25D;
+    font-weight: bold;
 }
 
 .imagem-destaque{
     display: block;
-    margin-left: 30%;
+    margin-left: 50px;
     border: 3px solid white;
     border-radius: 15px;
+    margin-bottom: 0px;
 }
 
 .artigos{
-    display: block;
-    margin-left: 35%;
+    overflow: hidden;
+    margin-top: 5px;
+    text-align: center;
+    margin-left: 20%;
+    margin-bottom: 0px;
 }
 
 .artigos article{
-    width: 20%;
-    height: 25%;
+    width: 200px;
     font-size: 14px;
-    display: inline;
     float: left;
     border: 1px solid white;
     border-radius: 8px;
-    margin: 50px;
+    margin: 30px;
+    padding: 10px;
 }
 
 .artigos article:hover{
@@ -82,7 +127,6 @@ main{
     width: 120px;
     height: 100px;
     display: block;
-    margin: 0 auto;
     margin-top: 10px;
     margin-bottom: 10px;
     border-radius: 5px;
@@ -98,5 +142,9 @@ main{
 
 footer{
     clear: both;
+    color: white;
+    font-size: 12px;
+    float: inline-end;
+    margin-right: 10px;
 }
 
