--- a/public/style.css
+++ b/public/style.css
@@ -130,7 +130,9 @@ aside ul li a{
     margin-top: 10px;
     margin-bottom: 10px;
     border-radius: 5px;
+    margin-left: 30px;
 }
+
 
 .artigos article p{
     margin-left: 5px;
